fix: .env.example file edited

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
 # Database
-DBNAME=lake
-PG_USERNAME=selvianl
-PG_PASSWORD=selvianl123
-HOST=localhost
-PORT=5432
-BUCKETNAME=datalake
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_DB=
+POSTGRES_PORT=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
+CELERY_TIMEZONE=
+
+REDIS_URL=
+REDIS_PORT=
+REDIS_DB=
 
 # Minio
-ENDPOINT=http://127.0.0.1:9000
-ACCESS=0aVtwTRuDjNfznTQeqkf
-SECRET=jqzNMqo81YsRDYpYdg0UXmHeqJStQ6IaMcehQkVi
+BUCKETNAME=
+ENDPOINT=
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
+
+# Constants
+TABLE_NAME=
+XLSX_FILE=
